--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -27,7 +27,7 @@ jobs:
           echo "${GITHUB_ACTION}"
           echo "${GITHUB_ACTIONS}"
           echo "${GITHUB_ACTOR}"
-          echo "${GITHUB_REPOSITORY"
+          echo "${GITHUB_REPOSITORY}"
           echo "${GITHUB_EVENT_NAME}"
           echo "${GITHUB_WORKSPACE}"
           echo "${GITHUB_SHA}"
