--- a/.github/workflows/create_issue.yml
+++ b/.github/workflows/create_issue.yml
@@ -4,14 +4,16 @@ on: push
 jobs:
   create-issue:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     steps:
       - name: Create issue using REST API
         run: |
           curl --request POST \
           --url https://api.github.com/repos/${{ github.repository }}/issue \
-          --header 'authorization: github_actions ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
           --header 'content-type: application/json' \
           --data '{
             "title": "Automated issue for commit: ${{ github.sha }}",
-            "body": "This issue was automatically created by the GitHub Action workflow **{{ github.workflow }}**. \n\n
-            The commit hash was: _${{ github.sha }}_."}'
+            "body": "This issue was automatically created by the GitHub Action workflow **{{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."}' \
+          --fail
