--- a/.github/workflows/repo_change_file.yml
+++ b/.github/workflows/repo_change_file.yml
@@ -5,7 +5,7 @@ jobs:
   create-file:
     runs-on: ubuntu-latest
     steps:
-      - name: Update commits.txt
+      - name: Clone
         run: |
           echo "PWD: $PWD"
           echo "ls -la"
@@ -21,6 +21,8 @@ jobs:
           git pull
           echo "ls -la"
           ls -la
+      - name: Update commits.txt
+        run: |
           echo "Updating commits.txt ..."
           echo ${{ github.sha }} >> commits.txt
           ls -a
