--- a/.github/workflows/repo_clone_action.yml
+++ b/.github/workflows/repo_clone_action.yml
@@ -10,7 +10,7 @@ jobs:
           echo "ls -la"
           ls -la
       - name: Clone
-        uses: actions/hello-world-javascript-action@v1
+        uses: actions/checkout@v1
       - name: List after
         run: |
           echo "ls -la"
