Repo change file - set branch

--- a/.github/workflows/repo_change_file.yml
+++ b/.github/workflows/repo_change_file.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           git config --global user.email "my-bot@bot.com"
           git config --global user.name "my-bot"
+          git checkout master
           git branch --set-upstream-to=origin/master
       - name: List after
         run: |
