--- a/.github/workflows/conditional_run.yml
+++ b/.github/workflows/conditional_run.yml
@@ -23,5 +23,5 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 1
     steps:
-      - name: Sleep for 2 minutes
+      - name: Sleep 2 minutes
         run: sleep 2m
