Add if: always() on required step

--- a/.github/workflows/conditional_run.yml
+++ b/.github/workflows/conditional_run.yml
@@ -18,6 +18,7 @@ jobs:
         if: always()
         run: echo "Running always"
       - name: Failing step with continue-on-error
+        if: always()
         continue-on-error: true
         run: unknown_command
       - name: Run after a failing step marked with continue-on-error true
