--- a/.github/workflows/services.yml
+++ b/.github/workflows/services.yml
@@ -15,6 +15,6 @@ jobs:
           - 27017:27017
     steps:
       - name: Post a user
-        run: "curl -X POST http://localhost:3001/api/user -H 'Content-Type: application/json' -d '{\"username\": \"hello\", \"address\": \"andrei\"}'"
+        run: "curl -X POST http://localhost:3001/api/user -H 'Content-Type: application/json' -d '{\"username\": \"andrei\", \"address\": \"Europe\"}'"
       - name: Get Users
         run: curl http://localhost:3001/api/users
