--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -17,7 +17,7 @@ jobs:
           - os: macos-latest
             node_version: 8
       fail-fast: true
-      max-parallel: 
+      max-parallel: 4
     runs-on: ${{ matrix.os }}
     env:
       IS_UBUNTU_8: ${{ matrix.is_ubuntu_8 }}
