Add apostrophes aroung args

--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -10,4 +10,4 @@ jobs:
         uses: docker://alpine
         with:
           entrypoint: ./script.sh
-          args: arg1 arg2
+          args: "arg1 arg2"
