--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: List cloned repository
+        run: ls -la
       - name: Run script
         uses: docker://node:12.14.1-alpine3.10
         with:
