--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -8,6 +8,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: List cloned repository
         run: ls -la
+      - name: List ./script.sh
+        run: cat ./script.sh
       - name: Run script
         uses: docker://node:12.14.1-alpine3.10
         with:
