--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run script
-        uses: docker://node:12.14.1-alpine3.10
+        uses: docker://alpine
         with:
           entrypoint: ./script.sh
           args: "arg1 arg2"
