--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,25 @@
 name: CI
 on:
   pull_request:
-    branches: [develop]
+    branches: [ develop ]
+  push:
+    branches: [ develop ]
 
 jobs:
   build:
-   runs-on: ubuntu-latest
-   steps:
-     - uses: actions/checkout@v2
-     - name: Build
-       run: |
-         mkdir build
-         cd build
-         cmake ..
-         make -j
-         ls -la src
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build
+        run: |
+          mkdir build
+          cd build
+          cmake ..
+          make -j
+          ls -la src
+      - name: Send a Slack notification
+        if: github.event_name == 'push'
+        uses: docker://technosophos/slack-notify
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_MESSAGE: "Merge to develop"
