--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
           ls -la src
   slack:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
       - name: Get the current branch name
         run: echo "::set-output name=branch::${GITHUB_REF#refs/heads/}"
