--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v2
       - name: Build
@@ -26,7 +27,11 @@ jobs:
         id: branch_name
       - name: Send a Slack notification
         if: github.event_name == 'push'
-        uses: docker://technosophos/slack-notify
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_MESSAGE: "Merge to ${{ steps.branch_name.output.branch }}"
+        uses: archive/github-actions-slack@v2.0.0
+        id: notify
+        with:
+          slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
+          slack-channel: C02H9B2NTA7
+          slack-text: Hello! Event "${{ github.event_name }}" in "${{ github.repository }}, branch ${{ steps.branch_name.output.branch }}" 🤓
+      - name: Send Slack Message Result
+        run: echo "${{ steps.send-message.outputs.slack-result }}"
