--- a/.github/workflows/slack_pull_request.yml
+++ b/.github/workflows/slack_pull_request.yml
@@ -17,5 +17,5 @@ jobs:
           slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_USER_OAUTH_ACCESS_TOKEN }}
           slack-channel: C02H9B2NTA7
           slack-text: Hello! Event "${{ github.event_name }}" in "${{ github.repository }}, branch ${{ steps.branch_name.output.branch }}" 🤓
-      - name: Send Slack Message Result
+      - name: Slack Message Result
         run: echo "${{ steps.send-message.outputs.slack-result }}"
