--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,15 +8,30 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     steps:
-      - uses: actions/checkout@v2
-      - name: Build C++
+      - name: Checkout sources
+        uses: actions/checkout@v2
+      - name: C++ - build
         run: |
           mkdir -p build
           cd build
           cmake ..
           make -j
           ls -la src
-      - name: Cache Cargo registry
+      - name: Rust - install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - name: Run cargo check
+        uses: actions-rs/cargo@v1
+        with:
+          command: check
+      - name: Run cargo test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+      - name: Rust - cache cargo registry
         uses: actions/cache@v2
         with:
           path: |
@@ -26,9 +41,5 @@ jobs:
             ~/.cargo/git/db/
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        - name: Install Rust
-          run: |
-            rustup update ${{ matrix.rust }} --no-self-update
-            rustup default ${{ matrix.rust }}
       - name: Build Rust
         run: cargo build
