--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,30 +10,20 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
-      - name: C++ - build
+      - name: C++ - Build
         run: |
           mkdir -p build
           cd build
           cmake ..
           make -j
           ls -la src
-      - name: Rust - install stable toolchain
+      - name: Rust - Install toolchain
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: stable
           override: true
-#      - name: Run cargo check
-#        uses: actions-rs/cargo@v1
-#        with:
-#          command: check
-#          arg: --manifest-path rust/Cargo.toml
-      - name: Run cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --manifest-path rust/Cargo.toml
-      - name: Rust - cache cargo registry
+      - name: Rust - Restore cache
         uses: actions/cache@v2
         with:
           path: |
@@ -43,8 +33,18 @@ jobs:
             ~/.cargo/git/db/
             rust/target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - name: Build Rust
+      - name: cargo test
         uses: actions-rs/cargo@v1
         with:
-          command: build
+          command: test
           args: --manifest-path rust/Cargo.toml
+      - name: Rust - Restore cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            rust/target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
